Nav: add 'When SECS = true' to top nav row across pages

--- a/index.html
+++ b/index.html
@@ -26,57 +26,42 @@
     <div id="particles"></div>
 
     <!-- Navigation -->
-<nav id="navbar">
-    <div class="nav-container">
-        <a href="/#SECS" class="logo-link">
-            <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <defs>
-                    <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#FF5E00;stop-opacity:1" />
-                        <stop offset="100%" style="stop-color:#00B2FF;stop-opacity:1" />
-                    </linearGradient>
-                </defs>
-
-                <!-- Outer ring -->
-                <circle cx="20" cy="20" r="18"
-                    fill="none"
-                    stroke="url(#logoGradient)"
-                    stroke-width="2" />
-
-                <!-- Middle ring -->
-                <circle cx="20" cy="20" r="12"
-                    fill="none"
-                    stroke="url(#logoGradient)"
-                    stroke-width="1.5"
-                    opacity="0.4" />
-
-                <!-- Core (sovereign green) -->
-                <circle cx="20" cy="20" r="4"
-                    fill="#48e662" />
-            </svg>
-            <span class="logo-text">SECS</span>
-        </a>
+   <!-- Navigation -->
+    <nav id="navbar">
+        <div class="nav-container">
+            <a href="/#SECS" class="logo-link">
+                <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color:#FF5E00" />
+                            <stop offset="100%" style="stop-color:#00B2FF" />
+                        </linearGradient>
+                    </defs>
+                    <circle cx="20" cy="20" r="18" fill="none" stroke="url(#logoGradient)" stroke-width="2" />
+                    <circle cx="20" cy="20" r="12" fill="none" stroke="url(#logoGradient)" stroke-width="1.5" opacity="0.4" />
+                    <circle cx="20" cy="20" r="4" fill="#48e662" />
+                </svg>
+                <span class="logo-text">SECS</span>
+            </a>
 
 
             <ul class="nav-links" id="navLinks">
                 <li><a href="/#SECS" class="nav-link">SECS</a></li>
                 <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
-                                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
-                <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
-                <li><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
-                <li><a href="/x=true.html" class="nav-link">x = true</a></li>
+                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
+                 <li class="bottom"><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
+                 <li class="bottom"><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
+                 <li class="bottom"><a href="/x=true.html" class="nav-link">x = true</a></li>
                  <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link active">Becoming Sovereign</a></li>
                  <li class="bottom"><a href="/secs-cockpit.html" class="nav-link disabled">SECS Cockpit</a></li>
             </ul>
 
-        <div class="menu-toggle" id="menuToggle">
-            <span></span>
-            <span></span>
-            <span></span>
+            <div class="menu-toggle" id="menuToggle">
+                <span></span><span></span><span></span>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
    <!-- Hero Section -->
 <section class="hero" id="SECS">
