--- a/becoming-sovereign.html
+++ b/becoming-sovereign.html
@@ -49,7 +49,8 @@
                 <li><a href="/#SECS" class="nav-link">SECS</a></li>
                 <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
-                 <li class="bottom"><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
+                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
+                <li class="bottom"><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                  <li class="bottom"><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
                  <li class="bottom"><a href="/x=true.html" class="nav-link">x = true</a></li>
                  <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link active">Becoming Sovereign</a></li>
