SEO/accessibility: single H1 on index/secs-cockpit, add canonical tags, visually-hidden util, robots.txt

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SECS Sovereign Execution and Collapse Substrate</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
 <link href="assets/css/style.css?v=4" rel="stylesheet">
+    <link rel="canonical" href="https://secs.observer/">
 
 </head>
 <body>
@@ -24,6 +25,8 @@
 
     <!-- Floating Particles -->
     <div id="particles"></div>
+
+    <h1 class="visually-hidden">SECS Sovereign — Deterministic substrate</h1>
 
     <!-- Navigation -->
    <!-- Navigation -->
@@ -70,31 +73,31 @@
 
             <!-- 1 — Determinism -->
             <div class="text-set active">
-                <h1 class="glitch-text" data-text="DETERMINISM IS HERE">DETERMINISM IS HERE</h1>
+                <h2 class="glitch-text" data-text="DETERMINISM IS HERE">DETERMINISM IS HERE</h2>
                 <p class="subtitle">Enter the substrate where outcomes are governed, not guessed</p>
             </div>
 
             <!-- 2 — Propagation -->
             <div class="text-set">
-                <h1 class="glitch-text" data-text="PROPAGATION IS TRUTH">PROPAGATION IS TRUTH</h1>
+                <h2 class="glitch-text" data-text="PROPAGATION IS TRUTH">PROPAGATION IS TRUTH</h2>
                 <p class="subtitle">Every tick is a trace, every trace a story, every story must close</p>
             </div>
 
             <!-- 3 — Zero Drift -->
             <div class="text-set">
-                <h1 class="glitch-text" data-text="ZERO DRIFT">ZERO DRIFT</h1>
+                <h2 class="glitch-text" data-text="ZERO DRIFT">ZERO DRIFT</h2>
                 <p class="subtitle">No ambiguity, no decay — only governed continuity across all surfaces</p>
             </div>
 
             <!-- 4 — SECS Sovereign -->
             <div class="text-set">
-                <h1 class="glitch-text" data-text="SECS SOVEREIGN">SECS SOVEREIGN</h1>
+                <h2 class="glitch-text" data-text="SECS SOVEREIGN">SECS SOVEREIGN</h2>
                 <p class="subtitle">A substrate built to express doctrine, not merely execute computation</p>
             </div>
 
             <!-- 5 — Ignition -->
             <div class="text-set">
-                <h1 class="glitch-text" data-text="IGNITION IS NOW">IGNITION IS NOW</h1>
+                <h2 class="glitch-text" data-text="IGNITION IS NOW">IGNITION IS NOW</h2>
                 <p class="subtitle">From bare scaffold to lived history — the product is the propagation</p>
             </div>
 
