--- a/secs-cockpit.html
+++ b/secs-cockpit.html
@@ -72,20 +72,20 @@
                     <h1 class="glitch-text" data-text="SOVEREIGN EXECUTION AND COLLAPSE SUBSTRATE">
                         SOVEREIGN EXECUTION AND COLLAPSE SUBSTRATE
                     </h1>
-                </div>
-
+                        <h2 class="glitch-text" data-text="SOVEREIGN EXECUTION AND COLLAPSE SUBSTRATE">
+                        </h2>
                 <!-- Line 2 -->
                 <div class="text-set">
                     <h1 class="glitch-text" data-text="SECS COCKPIT">
                         SECS COCKPIT
-                    </h1>
-                </div>
+                        <h2 class="glitch-text" data-text="SECS COCKPIT">
+                        </h2>
 
                 <!-- Line 3 -->
                 <div class="text-set">
                     <h1 class="glitch-text" data-text="CONFIRMING VISUALS">
-                        CONFIRMING VISUALS
-                    </h1>
+                        <h2 class="glitch-text" data-text="CONFIRMING VISUALS">
+                        </h2>
                 </div>
 
             </div>
