--- a/doctrine.html
+++ b/doctrine.html
@@ -7,6 +7,7 @@
   <title>Doctrine — SECS Sovereign</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css?v=4">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="canonical" href="https://secs.observer/">
 </head>
 
