--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -38,40 +38,12 @@
     <div id="particles"></div>
 
     <!-- Navigation -->
-    <nav id="navbar">
-        <div class="nav-container">
-            <a href="/#SECS" class="logo-link">
-                <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                    <defs>
-                        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#FF5E00" />
-                            <stop offset="100%" style="stop-color:#00B2FF" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="20" cy="20" r="18" fill="none" stroke="url(#logoGradient)" stroke-width="2" />
-                    <circle cx="20" cy="20" r="12" fill="none" stroke="url(#logoGradient)" stroke-width="1.5" opacity="0.4" />
-                    <circle cx="20" cy="20" r="4" fill="#48e662" />
-                </svg>
-                <span class="logo-text">SECS</span>
-            </a>
-
-            <ul class="nav-links" id="navLinks">
-                <li><a href="/#SECS" class="nav-link">SECS</a></li>
-                <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
-                <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
-                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
-                 <li class="bottom"><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
-                 <li class="bottom"><a href="/deeper-secs.html" class="nav-link active">Deeper SECS</a></li>
-                 <li class="bottom"><a href="/x=true.html" class="nav-link">x = true</a></li>
-                 <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link">Becoming Sovereign</a></li>
-                 <li class="bottom"><a href="/cockpit.html" class="nav-link disabled">SECS Cockpit (Coming Soon)</a></li>
-            </ul>
-
-            <div class="menu-toggle" id="menuToggle">
-                <span></span><span></span><span></span>
-            </div>
-        </div>
-    </nav>
+    <div id="nav"></div>
+    <script>
+      fetch('/nav.html')
+        .then(r => r.text())
+        .then(html => document.getElementById('nav').innerHTML = html);
+    </script>
 
     <!-- Deep SECS Surface -->
     <main class="container doctrinal-surface with-nav-offset">
@@ -183,7 +155,7 @@
             <div class="footer-section">
                 <h4>Doctrine</h4>
                 <ul class="footer-links">
-                    <li><a href="/doctrine.html">SECS Doctrinally</a></li>
+                    <li><a href="/doctrinal-secs.html">SECS Doctrinally</a></li>
                     <li><a href="/deeper-secs.html">Deeper SECS</a></li>
                     <li><a href="/x-true.html">x = true</a></li>
                     <li><a href="/truth-model.html">Truth Model</a></li>
@@ -214,13 +186,12 @@
 
                         Every inquiry becomes part of the lived history of the system.<br><br>
                         No noise. No drift. Just signal.<br><br>
-                    </p>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="footer-bottom">
+        <div id="footer"></div>
+        <script>
+          fetch('/footer.html')
+            .then(r => r.text())
+            .then(html => document.getElementById('footer').innerHTML = html);
+        </script>
             <p>© <span id="year"></span> SECS Sovereign. All rights governed.</p>
         </div>
     </footer>
