--- a/truth-model.html
+++ b/truth-model.html
@@ -38,41 +38,12 @@
     <div id="particles"></div>
 
     <!-- Navigation -->
-    <nav id="navbar">
-        <div class="nav-container">
-            <a href="/#SECS" class="logo-link">
-                <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                    <defs>
-                        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#FF5E00" />
-                            <stop offset="100%" style="stop-color:#00B2FF" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="20" cy="20" r="18" fill="none" stroke="url(#logoGradient)" stroke-width="2" />
-                    <circle cx="20" cy="20" r="12" fill="none" stroke="url(#logoGradient)" stroke-width="1.5" opacity="0.4" />
-                    <circle cx="20" cy="20" r="4" fill="#48e662" />
-                </svg>
-                <span class="logo-text">SECS</span>
-            </a>
-
-
-            <ul class="nav-links" id="navLinks">
-                <li><a href="/#SECS" class="nav-link">SECS</a></li>
-                <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
-                <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
-                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
-                 <li class="bottom"><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
-                 <li class="bottom"><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
-                 <li class="bottom"><a href="/x=true.html" class="nav-link">x = true</a></li>
-                 <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link active">Becoming Sovereign</a></li>
-                 <li class="bottom"><a href="/secs-cockpit.html" class="nav-link disabled">SECS Cockpit</a></li>
-            </ul>
-
-            <div class="menu-toggle" id="menuToggle">
-                <span></span><span></span><span></span>
-            </div>
-        </div>
-    </nav>
+    <div id="nav"></div>
+    <script>
+      fetch('/nav.html')
+        .then(r => r.text())
+        .then(html => document.getElementById('nav').innerHTML = html);
+    </script>
 
     <!-- Truth Model Surface -->
     <main class="container doctrinal-surface with-nav-offset">
@@ -161,56 +132,12 @@
 
     <!-- Footer -->
  <footer class="footer">
-    <div class="footer-container">
-
-        <div class="footer-section">
-            <h3>SECS Sovereign</h3>
-            <p class="footer-tagline">
-                Deterministic substrate. Governed continuity. Truth‑aligned computation.
-            </p>
-        </div>
-
-        <div class="footer-section">
-            <h4>Doctrine</h4>
-            <ul class="footer-links">
-                <li><a href="/doctrine.html">SECS Doctrinally</a></li>
-                <li><a href="/deeper-secs.html">Deeper SECS</a></li>
-                <li><a href="/x=true.html">x = true</a></li>
-                <li><a href="/truth-model.html">Truth Model</a></li>
-                <li><a href="/becoming-sovereign.html">Becoming Sovereign</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-section">
-            <h4>Connect</h4>
-            <ul class="footer-links">
-                <li><a href="mailto:jay@secs.observer">jay@secs.observer</a></li>
-                <li>
-                    <a href="https://www.linkedin.com/in/jay-carpenter-ba3a6161/" target="_blank" rel="noopener noreferrer" class="linkedin-link" aria-label="Jay Carpenter on LinkedIn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" style="vertical-align:middle;margin-right:6px;">
-                            <path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8h5v16H0zM7 8h4.8v2.2h.1c.7-1.3 2.4-2.6 4.9-2.6C23 7.6 24 12 24 16.9V24H19v-6.5c0-1.6 0-3.7-2.3-3.7S14 16 14 17.8V24H9V8z" />
-                        </svg>
-                        Jay Carpenter
-                    </a>
-                </li>
-            </ul>
-
-            <div class="footer-contact-blurb">
-                <h5>Connect With the Substrate</h5>
-                <p>
-                    SECS Sovereign is built on continuity, governance, and narrative clarity —
-                    and so is the way we communicate. If you’re exploring the doctrine, seeking
-                    alignment, or initiating a propagation event, reach out directly.<br><br>
-
-                    Every inquiry becomes part of the lived history of the system.<br><br>
-                    No noise. No drift. Just signal.<br><br>
-                </p>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="footer-bottom">
+<div id="footer"></div>
+<script>
+  fetch('/footer.html')
+    .then(r => r.text())
+    .then(html => document.getElementById('footer').innerHTML = html);
+</script>
         <p>© <span id="year"></span> SECS Sovereign. All rights governed.</p>
     </div>
 </footer>
