--- a/doctrinal-secs.html
+++ b/doctrinal-secs.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="assets/css/style.css?v=4">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="canonical" href="https://secs.observer/">
-        <!-- Google tag (gtag.js) -->
+        <!-- Google Analytics (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-667KK00S7H"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
             gtag('config', 'G-667KK00S7H');
         </script>
 </head>
