Add responsive viewport meta tag to all pages, update hero text CSS for mobile, and make mobile nav scrollable

--- a/doctrinal-secs.html
+++ b/doctrinal-secs.html
@@ -38,10 +38,14 @@
 
     <!-- Navigation -->
     <div id="nav"></div>
-    <script>
-      fetch('/nav.html')
-        .then(r => r.text())
-        .then(html => document.getElementById('nav').innerHTML = html);
+        <script>
+            fetch('/nav.html')
+                .then(r => r.text())
+                .then(html => {
+                    document.getElementById('nav').innerHTML = html;
+                    if (window.initMenuToggle) window.initMenuToggle();
+                });
+        </script>
     </script>
 
     <!-- Doctrinal Surface -->
