Clean up x=true.html header, consolidate nav, and fix CSS for glitch-text and mobile

--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
 
             <!-- 1 — Determinism -->
             <div class="text-set active">
-                <h2 class="glitch-text" data-text="DETERMINISM IS HERE"><span class="nowrap-mobile">DETERMINISM IS</span><span class="mobile-br"><br></span> HERE</h2>
+                <h2 class="glitch-text" data-text="DETERMINISM IS HERE">DETERMINISM IS HERE</h2>
                 <p class="subtitle">Enter the substrate where outcomes are governed, not guessed</p>
             </div>
 
             <!-- 2 — Propagation -->
             <div class="text-set">
-                <h2 class="glitch-text" data-text="PROPAGATION IS TRUTH"><span class="nowrap-mobile">PROPAGATION IS</span><span class="mobile-br"><br></span> TRUTH</h2>
+                <h2 class="glitch-text" data-text="PROPAGATION IS TRUTH">PROPAGATION IS TRUTH</h2>
                 <p class="subtitle">Every tick is a trace, every trace a story, every story must close</p>
             </div>
 
             <!-- 3 — Zero Drift -->
             <div class="text-set">
-                <h2 class="glitch-text" data-text="ZERO DRIFT"><span class="nowrap-mobile">ZERO</span><span class="mobile-br"><br></span> DRIFT</h2>
+                <h2 class="glitch-text" data-text="ZERO DRIFT">ZERO DRIFT</h2>
                 <p class="subtitle">No ambiguity, no decay — only governed continuity across all surfaces</p>
             </div>
 
             <!-- 4 — SECS Sovereign -->
             <div class="text-set">
-                <h2 class="glitch-text" data-text="SECS SOVEREIGN"><span class="nowrap-mobile">SECS</span><span class="mobile-br"><br></span> SOVEREIGN</h2>
+                <h2 class="glitch-text" data-text="SECS SOVEREIGN">SECS SOVEREIGN</h2>
                 <p class="subtitle">A substrate built to express doctrine, not merely execute computation</p>
             </div>
 
             <!-- 5 — Ignition -->
             <div class="text-set">
-                <h2 class="glitch-text" data-text="IGNITION IS NOW"><span class="nowrap-mobile">IGNITION IS</span><span class="mobile-br"><br></span> NOW</h2>
+                <h2 class="glitch-text" data-text="IGNITION IS NOW">IGNITION IS NOW</h2>
                 <p class="subtitle">From bare scaffold to lived history — the product is the propagation</p>
             </div>
 
