--- a/x=true.html
+++ b/x=true.html
@@ -1,23 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="SECS Sovereign — deterministic substrate, governed continuity, and truth-aligned computation.">
-  <title>x = true — SECS Sovereign</title>
+    <title>x = true — SECS Sovereign</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css?v=4">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="canonical" href="https://secs.observer/">
-        <!-- Google Analytics (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-667KK00S7H"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-667KK00S7H');
-        </script>
 </head>
 
 <body>
@@ -37,42 +28,16 @@
     <!-- Floating Particles -->
     <div id="particles"></div>
 
-    <!-- Navigation -->
-    <nav id="navbar">
-        <div class="nav-container">
-            <a href="/#SECS" class="logo-link">
-                <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                    <defs>
-                        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#FF5E00" />
-                            <stop offset="100%" style="stop-color:#00B2FF" />
-                        </linearGradient>
-                    </defs>
-                    <circle cx="20" cy="20" r="18" fill="none" stroke="url(#logoGradient)" stroke-width="2" />
-                    <circle cx="20" cy="20" r="12" fill="none" stroke="url(#logoGradient)" stroke-width="1.5" opacity="0.4" />
-                    <circle cx="20" cy="20" r="4" fill="#48e662" />
-                </svg>
-                <span class="logo-text">SECS</span>
-            </a>
-
-
-            <ul class="nav-links" id="navLinks">
-                <li><a href="/#SECS" class="nav-link">SECS</a></li>
-                <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
-                <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
-                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
-                <li class="bottom"><a href="/doctrinal-secs.html" class="nav-link">Doctrinal SECS</a></li>
-                 <li class="bottom"><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
-                 <li class="bottom"><a href="/x=true.html" class="nav-link">x = true</a></li>
-                 <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link">Becoming Sovereign</a></li>
-                 <li class="bottom"><a href="/secs-cockpit.html" class="nav-link disabled">SECS Cockpit</a></li>
-            </ul>
-
-            <div class="menu-toggle" id="menuToggle">
-                <span></span><span></span><span></span>
-            </div>
-        </div>
-    </nav>
+    <!-- Navigation Include -->
+    <div id="nav"></div>
+    <script>
+        fetch('/nav.html')
+            .then(r => r.text())
+            .then(html => {
+                document.getElementById('nav').innerHTML = html;
+                if (window.initMenuToggle) window.initMenuToggle();
+            });
+    </script>
 
     <!-- x = true Surface -->
     <main class="container doctrinal-surface with-nav-offset">
